<resources>
    <string name="app_name">PasoSeguro</string>
    <string name="SName">Usuario</string>
    <string name="SPass">Clave</string>
    <string name="button_enter">Ingresar</string>
    <string name="title_activity_map">Casos de la Semana</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Registrarse</string>

    <string name="defaultuser">Usuario</string>
    <string name="defaultpassword">Contraseña</string>
    <string name="registrate"><u>¿Eres nuev@? Registrate</u>.</string>
    <string name="backlogin"><u>¿Ya eres miembro? Ingresa</u>.</string>

    <string name="action_settings">Settings</string>
    <string name="nav_item_profile">Perfil</string>
    <string name="nav_item_my_cases">Mis casos</string>
    <string name="nav_item_alarm">Configurar alarma</string>
    <string name="nav_item_custom_filter">Filtro Personalizado</string>
    <string name="nav_item_danger">Zonas Peligrosas</string>
    <string name="nav_item_logout">Cerrar Sesión</string>
    <string name="fast_filter_item_semana">Semana</string>
    <string name="fast_filter_item_mes">Mes</string>
    <string name="fast_filter_item_anio">Año</string>
    <string name="fast_filter_item_custom">Personalizado</string>
    <string name="title_activity_case_map">Map</string>
    <string name="title_activity_my_cases">Mis Casos</string>
    <string name="title_activity_danger_zone">Map</string>

</resources>
