<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_item_profile" />
        <item
            android:id="@+id/navigation_item_my_cases"
            android:icon="@drawable/ic_mycases"
            android:title="@string/nav_item_my_cases" />

        <item
            android:id="@+id/navigation_item_custom_filter"
            android:icon="@drawable/ic_action_filter"
            android:title="@string/nav_item_custom_filter" />
        <item
            android:id="@+id/navigation_item_danger"
            android:icon="@drawable/ic_danger"
            android:title="@string/nav_item_danger" />
        <item
            android:id="@+id/navigation_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_item_logout" />
    </group>

    <!--<item android:title="@string/nav_sub_menu">
        <menu>
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:icon="@drawable/ic_emoticon"
                android:title="@string/nav_sub_menu_item02" />
        </menu>
    </item>-->

</menu>